2025-03-02  Bart Schaefer  <schaefer@toltec-ubuntu>

	* 53368: Src/options.c: ignore no-op changes to EMACS/VI options

2025-02-28  Oliver Kiddle  <opk@zsh.org>

	* 53395: Completion/Unix/Type/_zfs_dataset,
	Completion/Unix/Command/_zfs:
	complete snapshot ranges for zfs destroy

	* Ronan Pigott: 53393: Completion/Unix/Command/_python,
	Completion/Unix/Command/_python_module-http.server,
	Completion/Unix/Command/_python_module-json.tool,
	Completion/Unix/Command/_python_module-venv:
	Complete python module arguments

2025-02-27  Oliver Kiddle  <opk@zsh.org>

	* github #129: Vadim Misbakh-Soloviov:
	Completion/Unix/Command/_gpg: fix _gpg completion

	* 53378: Doc/Zsh/builtins.yo, Src/Builtins/rlimits.c, configure.ac:
	support new pipebuf resource limit on FreeBSD

2025-02-15  Bart Schaefer  <schaefer@zsh.org>

	* 53363: Src/builtin.c: permit "typeset -n +m pattern"

	* unposted: Src/builtin.c: fix spurious error printing the value
	of a read-only named reference

2025-02-13  Oliver Kiddle  <opk@zsh.org>

	* 53358: Completion/Zsh/Command/_typeset: adapt completion to
	reflect 53348 and extend exclusion lists to cover more + options

2025-02-12  Bart Schaefer  <schaefer@zsh.org>

	* 53360: Src/Zle/complist.c: domenuselect() fails if the previous
	completion did not generate a list (fix for segfault)

	* 53346 (cf. 53350): Util/helpfiles: fix use of "man" on file paths

	* 53348: Doc/Zsh/builtins.yo, Src/builtin.c, Test/K01nameref.ztst:
	Revise handling of incompatible typeset options when used with -n

2025-02-04  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* unposted: Doc/Makefile.in, Etc/Makefile.in: remove a few more
	files by 'make clean'

2025-01-30  Oliver Kiddle  <opk@zsh.org>

	* github #118: Eisuke Kawashima: Completion/Unix/Command/_git:
	git rebase non-interactive mode also supports --autosquash

	* 53338: Completion/Zsh/Command/_typeset: complete typeset -n option

	* 53337: Doc/Zsh/mod_ksh93.yo, Src/Modules/ksh93.c: allow nameref -p
